@startuml
'https://plantuml.com/class-diagram

abstract class Game {
    + action(): void
    # {abstract} setDifficultyParameters(): void
    # {abstract} spawnEnemies(): void
    # {abstract} checkAndSpawnBoss(): void
    # {abstract} enemyShoot(): void
    # {abstract} getBackgroundImage(): void
    # {abstract} updateDifficultyOverTime(): void
}

class EasyGame {
    # setDifficultyParameters(): void
    # spawnEnemies(): void
    # checkAndSpawnBoss(): void
    # enemyShoot(): void
    # getBackgroundImage(): void
    # updateDifficultyOverTime(): void
}

class CommonGame {
    # setDifficultyParameters(): void
    # spawnEnemies(): void
    # checkAndSpawnBoss(): void
    # enemyShoot(): void
    # getBackgroundImage(): void
}

class HardGame {
    # setDifficultyParameters(): void
    # spawnEnemies(): void
    # checkAndSpawnBoss(): void
    # enemyShoot(): void
    # getBackgroundImage(): void
}

Game <|-- EasyGame
Game <|-- CommonGame
Game <|-- HardGame
@enduml